--- a/cafeteria.html
+++ b/cafeteria.html
@@ -3852,7 +3852,8 @@ _____________\
 
 
       </pre>
-      <pre id="self92" style="display: none;"> <!-- 20 times -->
+      <pre id="self92" style="display: none;">
+
 
 
 
@@ -3893,6 +3894,510 @@ _____________\
 
 
       </pre>
+      <pre id="self93" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                  , -.
+                 ( /  \
+                 (𐙚)  /
+                   -'-
+                  / | \
+.--------------------------------------.
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self94" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    , -.
+                   ( /  \
+                   (𐙚)  /
+                     -'-
+                    / | \
+.--------------------------------------.
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self95" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                      , -.
+                     ( /  \
+                     (𐙚)  /
+                       -'-
+                      / | \
+.--------------------------------------.
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self96" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                        , -.
+                       ( /  \
+                       (𐙚)  /
+                         -'-
+                        / | \
+.--------------------------------------.
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self97" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                          , -.
+                         ( /  \
+                         (𐙚)  /
+                           -'-
+                          / | \
+.--------------------------------------.
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self98" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                            , -.
+                           ( /  \
+                           (𐙚)  /
+                             -'-
+                            / | \
+.--------------------------------------.
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self99" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                              , -.
+                             ( /  \
+                             (𐙚)  /
+                               -'-
+                              / | \
+.--------------------------------------.
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self100" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                , -.
+                               ( /  \
+                               (𐙚)  /
+                                 -'-
+                                / | \
+.--------------------------------------.
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self101" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                  , -.
+                                 ( /  \
+                                 (𐙚)  /
+                                   -'-
+                                  / | \
+.--------------------------------------.
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self102" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                    , -.
+                                   ( /  \
+                                   (𐙚)  /
+                                     -'-
+                                    / | \
+.--------------------------------------.|
+|\                                      \
+ \\______________________________________\
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self103" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                      , -.
+                                     ( /  \
+                                     (𐙚)  /
+                                       -'-
+                                      / | \
+.--------------------------------------.o_|
+|\                                      \╲
+ \\______________________________________\.
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
+      <pre id="self104" style="display: none;">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                        , -.
+                                       ( /  \
+                                       (𐙚)  /
+                                         -'-
+                                        / | \
+.--------------------------------------.|_o_|
+|\                                      \ ╳
+ \\______________________________________\ .
+  '--------------------------------------'
+
+
+
+
+
+
+
+
+
+
+      </pre>
     </div>
   </div>
   <div id="fade"></div>
@@ -3904,14 +4409,30 @@ _____________\
       }, 1000);
     };
 
-    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32", "self33", "self34", "self35", "self36", "self37", "self38", "self39", "self40", "self41", "self42", "self43", "self44", "self45", "self46", "self47", "self48", "self49", "self50", "self51", "self52", "self53", "self54", "self55", "self56", "self57", "self58", "self59", "self60", "self61", "self62", "self63", "self64", "self65", "self66", "self67", "self68", "self69", "self70", "self71", "self72", "self73", "self74", "self75", "self76", "self77", "self78", "self79", "self80", "self81", "self82", "self83", "self84", "self85", "self86", "self87", "self88", "self89", "self90", "self91", "self92"];
+    const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32", "self33", "self34", "self35", "self36", "self37", "self38", "self39", "self40", "self41", "self42", "self43", "self44", "self45", "self46", "self47", "self48", "self49", "self50", "self51", "self52", "self53", "self54", "self55", "self56", "self57", "self58", "self59", "self60", "self61", "self62", "self63", "self64", "self65", "self66", "self67", "self68", "self69", "self70", "self71", "self72", "self73", "self74", "self75", "self76", "self77", "self78", "self79", "self80", "self81", "self82", "self83", "self84", "self85", "self86", "self87", "self88", "self89", "self90", "self91", "self92", "self93", "self94", "self95", "self96", "self97", "self98", "self99", "self100", "self101", "self102", "self103", "self104"];
     let currentFrame = 0;
 
     function updateFrame() {
       frames.forEach(id => document.getElementById(id).style.display = "none");
       document.getElementById(frames[currentFrame]).style.display = "block";
 
-      if (currentFrame === 100) {
+      if (currentFrame === 91) {
+        document.getElementById("fade").style.opacity = "1";
+      }
+
+      if (currentFrame === 92) {
+        document.getElementById("fade").style.opacity = "0";
+      }
+
+      if (currentFrame === 102) {
+        document.getElementById("fade").style.opacity = "1";
+      }
+
+      if (currentFrame === 104) {
+        window.location.href = "afternoon.html";
+      }
+
+      if (currentFrame === 110) {
         setTimeout(() => {
           window.location.href = "cafeteria.html";
         }, 700);
@@ -3923,9 +4444,17 @@ _____________\
     function playFrames() {
       updateFrame();
 
-      let delay = 700;
-      if (currentFrame === 8 || currentFrame === 10 || currentFrame === 92) {
-        delay = 2000;
+      let delay = 700; //originally 700
+      if (currentFrame === 8 || currentFrame === 10) {
+        delay = 2000; //originally 2000
+        }
+      if (currentFrame === 92) {
+        delay = 7000; //originally 7000
+      }
+      if (currentFrame === 93) {
+        document.getElementById("clock").innerHTML = `╔═══════════════════╗
+║ Monday │ 12:20 PM ║
+╚═══════════════════╝`;
       }
 
       setTimeout(playFrames, delay);
@@ -3933,3 +4462,4 @@ _____________\
 
     playFrames();
   </script>
+</body>
