--- a/classroom.html
+++ b/classroom.html
@@ -1204,9 +1204,9 @@
     function playFrames() {
       updateFrame();
 
-      let delay = 700;
+      let delay = 700; //original 700
       if (currentFrame === 34 || currentFrame === 36 || currentFrame === 38 || currentFrame === 40 || currentFrame === 42 || currentFrame === 44 || currentFrame === 46 || currentFrame === 48 || currentFrame === 50) {
-        delay = 3000;
+        delay = 3000; //original 3000
       }
 
       setTimeout(playFrames, delay);
