--- a/afternoon.html
+++ b/afternoon.html
@@ -1010,7 +1010,7 @@
 
       if (currentFrame === 42) {
         setTimeout(() => {
-          window.location.href = "cafeteria.html";
+          window.location.href = "roadToHome.html";
         }, 700);
       } else {
         currentFrame = (currentFrame + 1) % frames.length;
