--- a/mirror.html
+++ b/mirror.html
@@ -77,7 +77,7 @@ Need to look good... what would look good on me...
 >
          </pre>
        </div>
-      <div id="dialogue-box2" class="dialogue-box" style="display: none;">
+      <div id="dialogue-box2" class="pointer dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
 Hmm... No... white makes me look fat...
@@ -86,7 +86,7 @@ Hmm... No... white makes me look fat...
 >
          </pre>
       </div>
-      <div id="dialogue-box3" class="dialogue-box" style="display: none;">
+      <div id="dialogue-box3" class="pointer dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
 The colors don't match... and my hair looks awful.
