--- a/childhood.html
+++ b/childhood.html
@@ -407,7 +407,7 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
         walking = false;
         girl.textContent = staticResearch;
     } else if (clickCount === 13) {
-        window.location.href = "menu.html";
+        window.location.href = "morning.html";
         return;
     }
 
