--- a/afternoon.html
+++ b/afternoon.html
@@ -36,7 +36,7 @@
     <div id="container">
       <pre class="time" id="clock">
 ╔═══════════════════╗
-║ Monday │ 12:27 PM ║
+║ ███day │ 12:27 PM ║
 ╚═══════════════════╝
       </pre>
       <pre id="self">
@@ -963,35 +963,35 @@
       const clock = document.getElementById("clock");
       if (currentFrame >= 0 && currentFrame < 20) {
         clock.innerHTML = `╔═══════════════════╗
-║ Monday │ 12:27 PM ║
+║ ███day │ 12:27 PM ║
 ╚═══════════════════╝`;
 } else if (currentFrame === 20) {
         clock.innerHTML = `╔═══════════════════╗
-║ Monday │ 12:28 PM ║
+║ ███day │ 12:28 PM ║
 ╚═══════════════════╝`;
 } else if (currentFrame === 28) {
         clock.innerHTML = `╔═══════════════════╗
-║ Monday │ 12:29 PM ║
+║ ███day │ 12:29 PM ║
 ╚═══════════════════╝`;
 } else if (currentFrame === 33) {
               clock.innerHTML = `╔═══════════════════╗
-║ Monday │ 12:30 PM ║
+║ ███day │ 12:30 PM ║
 ╚═══════════════════╝`;
 } else if (currentFrame === 35) {
                           clock.innerHTML = `╔══════════════════╗
-║ Monday │ 1:07 PM ║
+║ ███day │ 1:07 PM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 37) {
                           clock.innerHTML = `╔══════════════════╗
-║ Monday │ 1:10 PM ║
+║ ███day │ 1:10 PM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 39) {
                           clock.innerHTML = `╔══════════════════╗
-║ Monday │ 1:57 PM ║
+║ ███day │ 1:57 PM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 41) {
                           clock.innerHTML = `╔══════════════════╗
-║ Monday │ 2:00 PM ║
+║ ███day │ 2:00 PM ║
 ╚══════════════════╝`;
 }
 
