--- a/cafeteria.html
+++ b/cafeteria.html
@@ -36,7 +36,7 @@
     <div id="container">
       <pre class="time" id="clock">
 ╔═══════════════════╗
-║ Monday │ 11:30 AM ║
+║ ███day │ 11:30 AM ║
 ╚═══════════════════╝
       </pre>
       <pre id="self">
@@ -4453,7 +4453,7 @@ _____________\
       }
       if (currentFrame === 93) {
         document.getElementById("clock").innerHTML = `╔═══════════════════╗
-║ Monday │ 12:20 PM ║
+║ ███day │ 12:20 PM ║
 ╚═══════════════════╝`;
       }
 
