--- a/classroom.html
+++ b/classroom.html
@@ -1131,52 +1131,52 @@
       const clock = document.getElementById("clock");
       if (currentFrame >= 0 && currentFrame < 20) {
         clock.innerHTML = `╔══════════════════╗
-║ Monday │ 7:50 AM ║
+║ Mo█day │ 7:50 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 20) {
-        clock.innerHTML = `╔══════════════════╗
-║ Monday │ 7:51 AM ║
-╚══════════════════╝`;
+        clock.innerHTML = `╔═════════════════════╗
+║ █ed█esday │ 7:51 AM ║
+╚═════════════════════╝`;
 } else if (currentFrame === 28) {
         clock.innerHTML = `╔══════════════════╗
-║ Monday │ 7:52 AM ║
+║ ███day │ 7:52 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 33) {
               clock.innerHTML = `╔══════════════════╗
-║ Monday │ 7:54 AM ║
+║ █onday │ 7:54 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 35) {
                           clock.innerHTML = `╔══════════════════╗
-║ Monday │ 8:27 AM ║
+║ ███day │ 8:27 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 37) {
                           clock.innerHTML = `╔══════════════════╗
-║ Monday │ 8:30 AM ║
+║ ███day │ 8:30 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 39) {
-                          clock.innerHTML = `╔══════════════════╗
-║ Monday │ 9:18 AM ║
-╚══════════════════╝`;
+                          clock.innerHTML = `╔════════════════════╗
+║ █hu█sday │ 9:18 AM ║
+╚════════════════════╝`;
 } else if (currentFrame === 41) {
                           clock.innerHTML = `╔══════════════════╗
-║ Monday │ 9:20 AM ║
+║ █riday │ 9:20 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 43) {
                           clock.innerHTML = `╔═══════════════════╗
-║ Monday │ 10:08 AM ║
+║ ███day │ 10:08 AM ║
 ╚═══════════════════╝`;
 } else if (currentFrame === 45) {
                           clock.innerHTML = `╔═══════════════════╗
-║ Monday │ 10:10 AM ║
+║ ███day │ 10:10 AM ║
 ╚═══════════════════╝`;
 } else if (currentFrame === 47) {
-                          clock.innerHTML = `╔═══════════════════╗
-║ Monday │ 10:49 AM ║
-╚═══════════════════╝`;
+                          clock.innerHTML = `╔═════════════════════╗
+║ █████day │ 10:49 AM ║
+╚═════════════════════╝`;
 } else if (currentFrame === 49) {
-                          clock.innerHTML = `╔═══════════════════╗
-║ Monday │ 10:50 AM ║
-╚═══════════════════╝`;
+                          clock.innerHTML = `╔══════════════════════╗
+║ ██████day │ 10:50 AM ║
+╚══════════════════════╝`;
 }
 
       const fade = document.getElementById("fade");
