--- a/crossing.html
+++ b/crossing.html
@@ -27,9 +27,9 @@
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
-╔══════════════════╗
-║ Monday │ 7:47 AM ║
-╚══════════════════╝
+╔═════════════════════╗
+║ Thursday? │ 7:47 AM ║
+╚═════════════════════╝
       </pre>
       <pre>
                                                    /\
@@ -92,7 +92,7 @@ Someone please let me cross...
       <div id="dialogue-box3" class="pointer dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
-Finally, there are no cars.
+...
 
 
 >
@@ -143,9 +143,9 @@ Finally, there are no cars.
                   document.getElementById("street").style.display = "none";
                   document.getElementById("empty-street").style.display = "block";
                   document.getElementById("clock").innerHTML = `
-╔══════════════════╗
-║ Monday │ 7:49 AM ║
-╚══════════════════╝
+╔════════════════════╗
+║ █████day │ 7:49 AM ║
+╚════════════════════╝
             `;
 
                   document.body.style.opacity = "1";
