--- a/hallway.html
+++ b/hallway.html
@@ -36,7 +36,7 @@
     <div id="container">
       <pre class="time" id="clock">
 ╔══════════════════╗
-║ Monday │ 7:20 AM ║
+║ ███day │ 7:20 AM ║
 ╚══════════════════╝
       </pre>
       <pre class="asciiAlign">
