--- a/kitchen.html
+++ b/kitchen.html
@@ -35,9 +35,9 @@
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
-╔══════════════════╗
-║ Monday │ 7:25 AM ║
-╚══════════════════╝
+╔═══════════════════╗
+║ Friday? │ 7:25 AM ║
+╚═══════════════════╝
       </pre>
       <pre class="pointer" id="kitchen">
      ____________________________________________________
@@ -104,7 +104,7 @@ I'll just make some simple cereal for breakfast.
         document.getElementById("fade-in").style.display = "none";
       }, 2000);
     };
-    
+
     document.getElementById('kitchen').addEventListener('click', function() {
       document.getElementById('dialogue-box').style.display = 'block';
       document.getElementById('kitchen').classList.remove('pointer');
