--- a/mirror.html
+++ b/mirror.html
@@ -46,9 +46,9 @@
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
-╔══════════════════╗
-║ Monday │ 7:00 AM ║
-╚══════════════════╝
+╔════════════════════╗
+║ Tuesday? │ 7:00 AM ║
+╚════════════════════╝
       </pre>
       <pre id="ascii-mirror">
         ,/───`\
@@ -203,9 +203,9 @@ The colors don't match... and my hair looks awful.
         }
         document.getElementById("ascii-mirror").textContent = step.newMirror;
         document.getElementById("clock").textContent = `
-╔══════════════════╗
-║ Monday │ ${step.newTime} ║
-╚══════════════════╝`;
+╔═══════════════════╗
+║ Tuesday │ ${step.newTime} ║
+╚═══════════════════╝`;
       }, 2000);
     }
 
