--- a/street.html
+++ b/street.html
@@ -46,7 +46,7 @@
     <div id="container">
       <pre class="time" id="clock">
 ╔══════════════════╗
-║ Monday │ 7:40 AM ║
+║ ███day │ 7:40 AM ║
 ╚══════════════════╝
       </pre>
       <pre id="asciiArt">
