--- a/classroom.html
+++ b/classroom.html
@@ -45,9 +45,9 @@
  (  )  /     \  \/
 ,'  /'-.     .-'-.
 (,,)_|_|     |_|_|
-   /_o_\ -------------.          .-------------.           .- , --------.
+   /_o_\ -------------.          .-------------.           .౨ৎ, --------.
     | | |\             \         |\             \         /  \ )         \
-    . .  \\_____________\         \\_____________\        \  (𐙚) _________\
+    . .  \\_____________\         \\_____________\        \  ( ) _________\
           \,------------'          \,------------'         -'- -----------'
                                                           / | \
               .-------------.          .-------------.    |_o_| .-------------.
@@ -66,9 +66,9 @@
  (  )  /     \  \/
 ,'  /'-.     .-'-.
 (,,)_|_|     |_|_|
-   /_o_\ -------------.          .-------------.         .- , ----------.
+   /_o_\ -------------.          .-------------.         .౨ৎ, ----------.
     | | |\             \         |\             \       /  \ )           \
-    . .  \\_____________\         \\_____________\      \  (𐙚) ___________\
+    . .  \\_____________\         \\_____________\      \  ( ) ___________\
           \,------------'          \,------------'       -'- ,------------'
                                                         / | \
               .-------------.          .-------------.  |_o_|   .-------------.
@@ -87,9 +87,9 @@
  (  )  /     \  \/
 ,'  /'-.     .-'-.
 (,,)_|_|     |_|_|
-   /_o_\ -------------.          .-------------.       .- , ------------.
+   /_o_\ -------------.          .-------------.       .౨ৎ, ------------.
     | | |\             \         |\             \     /  \ )             \
-    . .  \\_____________\         \\_____________\    \  (𐙚) _____________\
+    . .  \\_____________\         \\_____________\    \  ( ) _____________\
           \,------------'          \,------------'     -'-  \,------------'
                                                       / | \
               .-------------.          .-------------.|_o_|     .-------------.
@@ -108,9 +108,9 @@
  (  )  /     \  \/
 ,'  /'-.     .-'-.
 (,,)_|_|     |_|_|
-   /_o_\ -------------.          .-------------.     .- , .-------------.
+   /_o_\ -------------.          .-------------.     .౨ৎ, .-------------.
     | | |\             \         |\             \   /  \ ) \             \
-    . .  \\_____________\         \\_____________\  \  (𐙚) \\_____________\
+    . .  \\_____________\         \\_____________\  \  ( ) \\_____________\
           \,------------'          \,------------'   -'-    \,------------'
                                                     / | \
               .-------------.          .-------------.o_|       .-------------.
@@ -129,9 +129,9 @@
  (  )  /     \  \/                                                                    \
 ,'  /'-.     .-'-.                                                                    .
 (,,)_|_|     |_|_|                                                                    |
-   /_o_\ -------------.          .-------------.   .- ,   .-------------.             |
+   /_o_\ -------------.          .-------------.   .౨ৎ,   .-------------.             |
     | | |\             \         |\             \ /  \ )  |\             \
-    . .  \\_____________\         \\_____________ \  (𐙚)   \\_____________\
+    . .  \\_____________\         \\_____________ \  ( )   \\_____________\
           \,------------'          \,------------' -'-      \,------------'
                                                   / | \
               .-------------.          .-------------.|         .-------------.
@@ -150,9 +150,9 @@
  (  )  /     \  \/                                                                  \
 ,'  /'-.     .-'-.                                                                  .-
 (,,)_|_|     |_|_|                                                                  |_|
-   /_o_\ -------------.          .-------------. .- ,     .-------------.           |_o
+   /_o_\ -------------.          .-------------. .౨ৎ,     .-------------.           |_o
     | | |\             \         |\             /  \ )    |\             \           ╱
-    . .  \\_____________\         \\___________ \  (𐙚)     \\_____________\         .
+    . .  \\_____________\         \\___________ \  ( )     \\_____________\         .
           \,------------'          \,----------- -'-        \,------------'
                                                 / | \
               .-------------.          .-------------.          .-------------.
@@ -171,9 +171,9 @@
  (  )  /     \  \/                                                               \  (
 ,'  /'-.     .-'-.                                                               .-'-
 (,,)_|_|     |_|_|                                                               |_|_
-   /_o_\ -------------.          .------------ .- ,       .-------------.        |_o_
+   /_o_\ -------------.          .------------ .౨ৎ,       .-------------.        |_o_
     | | |\             \         |\           /  \ )      |\             \         ╳
-    . .  \\_____________\         \\_________ \  (𐙚)       \\_____________\       . .
+    . .  \\_____________\         \\_________ \  ( )       \\_____________\       . .
           \,------------'          \,--------- -'-          \,------------'
                                               / | \
               .-------------.          .-------------.          .-------------.
@@ -1121,6 +1121,13 @@
       }, 1000);
     };
 
+    function colorBows() {
+      const pres = document.querySelectorAll("pre");
+      pres.forEach(pre => {
+        pre.innerHTML = pre.innerHTML.replaceAll("౨ৎ", `<span style="color: #F18AC1;">౨ৎ</span>`);
+      });
+    }
+
     const frames = ["self", "self1", "self2", "self3", "self4", "self5", "self6", "self7", "self8", "self9", "self10", "self11", "self12", "self13", "self14", "self15", "self16", "self17", "self18", "self19", "self20", "self21", "self22", "self23", "self24", "self25", "self26", "self27", "self28", "self29", "self30", "self31", "self32", "self33", "self34", "self35", "self36", "self37", "self38", "self39", "self40", "self41", "self42", "self43", "self44", "self45", "self46", "self47", "self48", "self49", "self50"];
     let currentFrame = 0;
 
@@ -1199,6 +1206,8 @@
       } else {
         currentFrame = (currentFrame + 1) % frames.length;
       }
+
+      colorBows();
     }
 
     function playFrames() {
