--- a/mirror.html
+++ b/mirror.html
@@ -40,6 +40,10 @@
     transition: opacity 2s ease-in-out;
     pointer-events: none;
   }
+
+  .pink-bow {
+    color: #ff69b4; /* Hot pink! You can change this to another shade if you prefer */
+  }
 </style>
 <body>
   <div id="fade-in"></div>
