--- a/classroom.html
+++ b/classroom.html
@@ -36,7 +36,7 @@
     <div id="container">
       <pre class="time" id="clock">
 ╔══════════════════╗
-║ Monday │ 7:50 AM ║
+║ ███day │ 7:50 AM ║
 ╚══════════════════╝
       </pre>
       <pre id="self">
