--- a/crossing.html
+++ b/crossing.html
@@ -27,33 +27,25 @@
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
-╔═════════════════════╗
-║ Thursday? │ 7:47 AM ║
-╚═════════════════════╝
+╔════════════════════╗
+║ █████day │ 7:47 AM ║
+╚════════════════════╝
       </pre>
       <pre>
-                                                   /\
-                                                  /  \
-                                                 /    \
-                                                /______\
-                                                |      |
-                                                |[]  []|
-                                                |______|
-              __                                |  __  |
-             /  \       ________________________|_/  \_|__
-            /    \     /=========================/    \===|
-           /  []  \   /=========================/  []  \==|
-          /________\ /=========================/________\=|
-       *  |        |/==========================|        |=|
-      *** |        |---------------------------|        |--
-     *****| []  [] |  []  []   _____   []  []  | []  [] | |
-    *******        |          /_____\          |        | |
-   *********       |          |  |  |          |        | |
-  ***********]  [] |  []  []  |  |  |  []  []  | []  [] | |
- *************     |          |__|__|          |        | |
-***************    |-----------=====-----------|        |_|
-***************____|          |=====|          |________|
- *************               /=======\</pre>
+    /\                                         /\
+   /  \_______________________________________/  \
+  /    \=====================================/    \
+ /  []  \===================================/  []  \
+/________\=================================/________\
+|        |=================================|        |
+|        |-------------- ___ --------------|        |
+| []  [] |  []     []   /   \   []     []  | []  [] |
+|        |             /_____\             |        |
+|        |             |  |  |             |        |
+| []  [] |  []     []  |  |  |  []     []  | []  [] |
+|        |             |__|__|             |        |
+|        |--------------=====--------------|        |
+|________|             /=====\             |________|</pre>
       <pre id="street">
 
 _______________________________  ,--. _______________________  ,--. __________  ,--. ______________________________________
